main.py.err
  File "<stdin>", line 5
    print '\n'
             ^
SyntaxError: Missing parentheses in call to 'print'
